[flake8]
max-line-length = 88
ignore = B008,D203,E203,W503

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88

[mypy]
ignore_missing_imports=True

[pydocstyle]
add-ignore = D100,D101,D102,D103,D104,D105,D107
convention = google

[tool:pytest]
testpaths = tests

[metadata]
name = pmqd
version = 1.0.0
author = Peltarion
author_email = contact@peltarion.com
description = Perceived Music Quality Dataset
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Peltarion/pmqd
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pandas>=1.0.0
    tqdm>=4.54

[options.package_data]
pmqd.tfds.pmqd = checksums.tsv

[options.extras_require]
torch = torch>=1.7.1; torchaudio>=0.8.0
tfds = tensorflow>=2.4.1; tensorflow-datasets>=4.2.0; pydub>=0.25.1

[options.packages.find]
where = src
